--- a/priv/index.html
+++ b/priv/index.html
@@ -1,16 +1,23 @@
 <html>
   <script language="JavaScript">
-    function q(from, to){
+    function q(){
+      console.log("Running function q");
       var oldScript = document.getElementById("fetch");
+      var fromDate = get_val("fromDateText");
+      var toDate = get_val("toDateText");
+      console.log("From date: " + fromDate);
+      console.log("To date: " + toDate);
       if(oldScript){
         oldScript.remove();
       }
       var s = document.createElement("script");
-      s.src = "http://localhost:8080/?callback=load&from=" + from + "&to=" + to;
+      s.src = "http://localhost:8080/?callback=load&from="
+        + fromDate
+        + "&to="
+        + toDate;
       s.id = "fetch";
 
-      s.onload = function() { 
-        console.log('script loaded.');
+      s.onload = function() {
         loadTable();
       };
 
@@ -27,6 +34,7 @@
       }
       var table = document.createElement("table");
       table.id = "table1";
+      console.log('# recs: ' + records.length);
       records.forEach(tableWriter(table));
       document.body.appendChild(table);
     }
@@ -45,7 +53,19 @@
              }
     }
 
+    function get_val(Id){
+      var element = document.getElementById(Id);
+      return element.value;
+    }
+
   </script>
   <body>
+    From:
+    <input id="fromDateText" type="text" value="2018-10-01">
+    <br>
+    To:
+    <input id="toDateText" type="text" value="2018-10-03">
+    <br>
+    <button display="query" text="query" onclick="q();">Query</button>
   </body>
 </html>
