Organize form elements in a table

--- a/priv/index.html
+++ b/priv/index.html
@@ -60,11 +60,24 @@
 
   </script>
   <body>
-    From:
-    <input id="fromDateText" type="text" value="2018-10-01">
-    <br>
-    To:
-    <input id="toDateText" type="text" value="2018-10-03">
+    <table>
+      <tr>
+        <td>
+          From:
+        </td>
+        <td>
+          <input id="fromDateText" type="text" value="2018-10-01">
+        </td>
+      </tr>
+      <tr>
+        <td>
+          To:
+        </td>
+        <td>
+          <input id="toDateText" type="text" value="2018-10-03">
+        </td>
+      </tr>
+    </table>
     <br>
     <button display="query" text="query" onclick="q();">Query</button>
   </body>
