--- a/priv/index.html
+++ b/priv/index.html
@@ -2,207 +2,7 @@
   <head>
     <link rel="stylesheet" href="budget.css">
   </head>
-  <script language="JavaScript">
-    const white = "#" + "FFFFFF";
-    const lightGrey = "#" + "D0D0D0";
-    const lightBlue = "#" + "B0B0D0";
-
-    var selectedRowIds = [];
-    var checkboxes = {};
-    var rows = {};
-
-    function q(){
-      console.log("Running function q");
-      var oldScript = document.getElementById("fetch");
-      var fromDate = get_val("fromDateText");
-      var toDate = get_val("toDateText");
-      console.log("From date: " + fromDate);
-      console.log("To date: " + toDate);
-      if(oldScript){
-        oldScript.remove();
-      }
-      var s = document.createElement("script");
-      s.src = "http://localhost:8080/?callback=load&from="
-        + fromDate
-        + "&to="
-        + toDate;
-      s.id = "fetch";
-
-      s.onload = function() {
-        loadTable();
-      };
-
-      document.body.appendChild(s);
-
-    }
-
-    function loadTable(){
-      var records = load();
-      if(records.length == 0){
-        return;
-      }
-
-      checkboxes = {};
-
-      var oldTable = document.getElementById("table1");
-      if(oldTable){
-        oldTable.remove();
-      }
-      var table = document.createElement("table");
-      table.id = "table1";
-      table.className = "table";
-
-      var header = table.createTHead();
-      var row = header.insertRow(0);
-      var cell;
-      var rec = records[0];
-
-      var checkbox = document.createElement("INPUT");
-      checkbox.setAttribute("type", "checkbox");
-      checkbox.id = "allOrNone";
-      checkbox.addEventListener("click", all_or_none_click);
-      cell = row.insertCell(row.cells.length);
-      cell.appendChild(checkbox);
-
-      for (k in rec){
-        if(k == "id"){
-          continue;
-        }
-        cell = row.insertCell(row.cells.length);
-        cell.innerHTML = "" + k;
-        cell.bgColor = lightGrey;
-      }
-
-      records.forEach(tableWriter(table));
-      document.body.appendChild(table);
-    }
-
-    function tableWriter(table){
-      return function(obj){
-               var row = table.insertRow();
-               row.id = obj.id;
-               rows[row.id] = row;
-               var cell;
-               var val;
-
-               var checkbox = document.createElement("INPUT");
-               checkbox.setAttribute("type", "checkbox");
-               checkbox.id = "cbx" + row.id;
-               checkboxes[row.id] = checkbox;
-               checkbox.addEventListener("click", cbx_mouse_click);
-               cell = row.insertCell(row.cells.length);
-               cell.appendChild(checkbox);
-
-               for (var k in obj){
-                 val = obj[k];
-                 if(k == "id"){
-                   continue;
-                 } else if((k == "date" || k == "posted") && obj[k]){
-                   val = obj[k].split("T")[0];
-                 }
-                 cell = row.insertCell(row.cells.length);
-                 cell.innerHTML = val;
-               }
-
-               row.style.cursor = "pointer";
-               row.addEventListener("mouseover", row_mouse_over);
-               row.addEventListener("mouseout", row_mouse_out);
-               row.addEventListener("click", row_mouse_click);
-             }
-    }
-
-    function get_val(Id){
-      var element = document.getElementById(Id);
-      return element.value;
-    }
-
-    function row_mouse_over(event){
-      cell = event.target;
-      if(!is_row_selected(cell)){
-        cell.parentElement.style.backgroundColor = lightGrey;
-      }
-    }
-
-    function row_mouse_out(event){
-      var cell = event.target;
-      if(!is_row_selected(cell)){
-        cell.parentElement.style.backgroundColor = white;
-      }
-    }
-
-    function row_mouse_click(event){
-      var cell = event.target;
-      if(is_row_selected(cell)){
-        deselect_row_by_cell(cell);
-      }else{
-        select_row_by_cell(cell);
-      }
-    }
-
-    function cbx_mouse_click(event){
-      var cbx = event.target;
-      var newEvent = {'target': cbx.parentElement};
-      event.stopPropagation();
-      row_mouse_click(newEvent);
-    }
-
-    function is_row_selected(cell){
-      var row = cell.parentElement;
-      var rowId = row.id;
-      return selectedRowIds.findIndex(x => x == rowId) != -1;
-    }
-
-    function is_any_row_selected(){
-      return -1 != Object.values(checkboxes).findIndex(e => e.checked);
-    }
-
-    function select_row_by_cell(cell){
-      var row = cell.parentElement;
-      select_row_by_row(row);
-    }
-
-    function select_row_by_row(row){
-      var rowId = row.id;
-      select_row(rowId);
-    }
-
-    function select_row(rowId){
-      selectedRowIds.push(rowId);
-      checkboxes[rowId].checked = true;
-      cell.parentElement.style.backgroundColor = lightBlue;
-      document.getElementById("allOrNone").checked = true;
-    }
-
-    function deselect_row_by_cell(cell){
-      var row = cell.parentElement;
-      deselect_row(row.id);
-      //selectedRowIds = selectedRowIds.filter(x => x != rowId);
-    }
-
-    function deselect_row(id){
-      checkboxes[id].checked = false;
-      cell.parentElement.style.backgroundColor = white;
-      if(!is_any_row_selected()){
-        document.getElementById("allOrNone").checked = false;
-      }
-    }
-
-    function all_or_none_click(event){
-      if(is_any_row_selected){
-        Object.values(checkboxes).forEach(e => e.checked = false);
-        event.target.checked = false;
-        selectedRowIds.forEach(e => deselect_by_id(e));
-      }else{
-        Object.values(checkboxes).forEach(e => e.checked = true);
-        event.target.checked = true;
-        Object.values(rows).forEach(e => select_row_by_row(row));
-      }
-    }
-
-    function getById(Id){
-      return document.getElementById(Id);
-    }
-
+  <script src="budget.js" language="JavaScript">
   </script>
   <body>
     <table>
