WIP: move tx category stuff to its own handler
Moved the XHR-specific stuff to its own handler.

Working out the bugs.

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -9,8 +9,8 @@
       margin-right: 2px;
     }
   </style>
-  <script src="budget.js" language="JavaScript">
-  </script>
+  <script src="budget_http.js" language="JavaScript"></script>
+  <script src="budget.js" language="JavaScript"></script>
   <body onload="fetch_categories()">
     <table style="font-size: 100%">
       <tr>
