Add a favicon curtesy of ...
http://openclipart.org

"We also encourage you to check out Backblaze online backup. We use
Backblaze to backup our computers and keep our data safe. They offer
a free 15 day trial and are the easiest online backup service we have
used.

Use this link http://www.freefavicon.com/blog/outgoing/backblaze.php
to try Backblaze for Free!"

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <!-- Book ends icon courtesy of openclipart.com -->
+    <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="budget.css">
   </head>
   <style type="text/css">
