Upload CSV files to insert into the DB
Upload a CSV file from the web page and then pass it to budget.erl to be
inserted into the database and all auto-categories applied.

TODO: don't hard-code the CSV type.

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <!-- Book ends icon courtesy of openclipart.com -->
@@ -21,6 +22,15 @@
         </td>
         <td>
           <input id="fromDateText" type="text" value="2018-10-01">
+        </td>
+        <td>
+          Upload File:
+        </td>
+        <td>
+          <input id="uploadFile" type="file">
+        </td>
+        <td>
+          <input id="uploadButton" type="button" value="upload" onclick="upload_file();">
         </td>
       </tr>
       <tr>
