Messing with fonts
Seems like with Apple I can't change the fonts of buttons reliably.

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -17,7 +17,10 @@
   <body onload="fetch_categories()">
     Upload File:
     <input id="uploadFile" type="file">
-    <input id="uploadButton" type="button" value="upload" onclick="upload_file();">
+    <input id="uploadButton"
+           type="button"
+           value="upload"
+           onclick="upload_file();">
 
     <table style="font-size: 100%">
       <tr>
