Add Capital One importing
The Capital One format is:
Transaction Date,
Posted Date,
Card No.,
Description,
Category,
Debit,
Credit

I've combined Debit and Credit into one field and I'm using "Category"
(Mastercard's feeble attempt at categorization) as desc_1.

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -22,6 +22,15 @@
            value="upload"
            onclick="upload_file();">
 
+    <input list="csvTypes"
+           id="csvType"
+           name="csvType"/>
+
+    <datalist id="csvTypes">
+        <option value="rbc">
+        <option value="capital_one">
+    </datalist>
+
     <table style="font-size: 100%">
       <tr>
         <td>
