Wire up new transaction dialog
There's no visible error if adding a new transaction doesn't work but if
the stars are aligned and you say the incantation just right you can add
a new transaction.

Erlang can't convert a string or binary to a float unless there's a
decimal point so I've updated to_float to make sure a decimal point
exists.

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -15,7 +15,7 @@
     <script src="budget.js" language="JavaScript"></script>
     <script src="budget_new.js" language="JavaScript"></script>
   </head>
-  <body onload="fetch_categories(); addNewEventListeners();">
+  <body onload="fetch_categories(); setup_new_dialog();">
     Upload File:
     <input id="uploadFile" type="file">
     <input id="uploadButton"
@@ -69,7 +69,7 @@
           &nbsp;
         </td>
         <td>
-          <input type="button" value="Fetch">
+          <input id="fetch" type="button" value="Fetch" onclick="fetch_transactions();">
           <input id="showAddDialog" type="button" value="Add">
         </td>
       </tr>
